knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Plan_Score_History__c/pqcrush__pq_Opportunity_Plan_Score_History__c.object-meta.xml
<CustomObject>
    <label>Opportunity Plan Score History</label>
    <nameField>
        <displayFormat>OPSH={0000}</displayFormat>
        <label>Opportunity Plan Score History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Plan Score Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>