knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Plan_Score_History__c/fields/pqcrush__Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Opportunity_Plan__c</fullName>
    <label>Opportunity Plan</label>
    <referenceTo>pqcrush__PQ_Opportunity_Plan__c</referenceTo>
    <relationshipLabel>Opportunity Plan Score Histories</relationshipLabel>
    <relationshipName>Opportunity_Plan_Score_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>