knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Opportunity_Plan_Score_History__c/fields/pqcrush__Year__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Year__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>